# kagome-vqe

./: .gitignore  README.md  output.txt  output_0.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_{i}.txt  pyproject.toml
Rapport/: .~lock.Untitled 1.odp#  PageTitre.tex  Untitled 1.odp  main.out  main.tex  refs.bib  style.sty
Rapport/figs/: ansatz1.tex  ansatz2.tex  kagome.py  measure_x.tex  measure_y.tex  measure_z.tex
Rapport/figs/qcs/: qc_ans.py  qc_mesure_pauli.py
Rapport/sections/: annexe.tex  conclusion.tex  introduction.tex  metho.tex  resultats.tex  theorie.tex
src/: diag_exact.py  diag_quspin.py  matrice_periodique.py  pauli.py  visualisation.py  vqe.py
