[tool.poetry]
name = "initiationrecherche"
version = "0.1.0"
description = ""
authors = ["Dimitri Bonanni-Surprenant <bonanni1496dimitri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
numpy = "^1.24.1"
scipy = "^1.10.0"
matplotlib = "^3.6.3"
pyqt5 = "^5.15.8"
tqdm = "^4.64.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
